--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "main": "src/index.ts",
   "name": "anitoon",
-  "version": "0.0.1",
+  "version": "0.1.2",
   "repository": {
     "directory": "github:kkn1125/easywebtoon",
     "type": "git",
@@ -20,13 +20,14 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy": "rm -rf dist/ && pnpm build && touch ./dist/.nojekyll && cd dist && git init && git add -A && git commit -m \"gh-pages\" && git push https://github.com/kkn1125/easywebtoon.git master:gh-pages -f"
+    "deploy": "rm -rf dist/ && pnpm build && touch ./dist/.nojekyll && && echo \"easywebtoon.kro.kr\" > ./dist/CNAME && cd dist && git init && git add -A && git commit -m \"gh-pages\" && git push https://github.com/kkn1125/easywebtoon.git master:gh-pages -f"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "fastclick": "^1.0.6",
     "gif.js": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
