--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "main": "src/index.ts",
-  "name": "anitoon",
+  "name": "easywebtoon",
   "version": "0.1.2",
   "repository": {
     "directory": "github:kkn1125/easywebtoon",
@@ -20,7 +20,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy": "rm -rf dist/ && pnpm build && touch ./dist/.nojekyll && && echo \"easywebtoon.kro.kr\" > ./dist/CNAME && cd dist && git init && git add -A && git commit -m \"gh-pages\" && git push https://github.com/kkn1125/easywebtoon.git master:gh-pages -f"
+    "deploy": "rm -rf dist/ && pnpm build && touch ./dist/.nojekyll && echo \"easywebtoon.kro.kr\" > ./dist/CNAME && cd dist && git init && git add -A && git commit -m \"gh-pages\" && git push https://github.com/kkn1125/easywebtoon.git master:gh-pages -f"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
