--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy": "rm -rf dist/ && pnpm build && touch ./dist/.nojekyll && echo \"easywebtoon.kro.kr\" > ./dist/CNAME && cp sitemap.xml ./dist/ && cd dist && git init && git add -A && git commit -m \"gh-pages\" && git push https://github.com/kkn1125/easywebtoon.git master:gh-pages -f"
+    "deploy": "rm -rf dist/ && pnpm build && touch ./dist/.nojekyll && echo \"easywebtoon.kro.kr\" > ./dist/CNAME && cp sitemap.xml ./dist/ && cp robots.txt ./dist/ && cd dist && git init && git add -A && git commit -m \"gh-pages\" && git push https://github.com/kkn1125/easywebtoon.git master:gh-pages -f"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
