--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "main": "src/index.ts",
   "name": "easywebtoon",
   "version": "0.1.2",
+  "homepage": "https://easywebtoon.kro.kr/",
   "repository": {
     "directory": "github:kkn1125/easywebtoon",
     "type": "git",
@@ -20,7 +21,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy": "rm -rf dist/ && pnpm build && touch ./dist/.nojekyll && echo \"easywebtoon.kro.kr\" > ./dist/CNAME && cp sitemap.xml ./dist/ && cp robots.txt ./dist/ && cp gif.worker.js gif.worker.js.map ./dist/ && cd dist && git init && git add -A && git commit -m \"gh-pages\" && git push https://github.com/kkn1125/easywebtoon.git master:gh-pages -f"
+    "deploy": "rm -rf dist/ && pnpm build && touch ./dist/.nojekyll && echo easywebtoon.kro.kr > ./dist/CNAME && cp sitemap.xml ./dist/ && cp robots.txt ./dist/ && cp gif.worker.js gif.worker.js.map ./dist/ && cd dist && git init && git add -A && git commit -m \"gh-pages\" && git push https://github.com/kkn1125/easywebtoon.git master:gh-pages -f"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
