✨ feat: easywebtoon destory 메서드에 canvas element 초기화 추가 + GIF 저장 시 배경 및 지우개 검정색 되는 버그 수정 + GIF 내보내기 100% 로드 변환 후 대기 안내 문구 추가

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "main": "src/index.ts",
   "name": "easywebtoon",
-  "version": "0.1.7",
+  "version": "0.1.9",
   "homepage": "https://easywebtoon.kro.kr/",
   "repository": {
     "directory": "github:kkn1125/easywebtoon",
@@ -37,6 +37,7 @@
     "vite": "^5.2.8"
   },
   "devDependencies": {
+    "@types/gif.js": "^0.2.5",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
