--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@tanstack/react-query": "^5.32.1",
+    "axios": "^1.6.8",
     "fastclick": "^1.0.6",
     "gif.js": "^0.2.0",
     "react": "^18.2.0",
